Bug 1304270 - Run FakeOnDeviceChangeEventRunnable on a dedicated thread rather than Camera IPC thread to prevent deadlock. r=pehrsons, a=gchang

MozReview-Commit-ID: HU3wqcG0Gxg

--HG--
extra : source : 02b1f8c28483f8dd5762580b762cf00e7529ee73